# lang

./: .gitignore  CMakeLists.txt  build.sh  gx.c  gx.gx  xmake.lua
parser/: build.sh  main  main.c
src/: common.h  darray.h  lexer.c  lexer.h  parser.c  parser.h  str.c  str.h
